# coldplate-topobridge

./: .gitignore  02_diamond_velocity_field.npz  ARTIFACT_RULES.md  CLAIM_TIERS.md  CLAUDE.md  README.md  baseline_candidtate_velocity_field.npz  baseline_single_velocity_field.npz  candidate02_provenance.json  pyproject.toml  single_baseline_provenance.json  velocity_field.npz
.agent/: AGENT_MISSION.md  GUARDRAILS.md  WORKFLOWS.md
artifacts/: .gitkeep
artifacts/ctrl_single_obstruction_z15/: field_contract.json  manifest.json  signatures.jsonl  summary.json
artifacts/ctrl_single_obstruction_z25/: field_contract.json  manifest.json  (+2 more)
docs/: CHECKPOINT_STATUS.md  CLAIM_AUDIT_REPORT.md  CONTROL_GAP_PACKET.md  EXPERIMENT_ANALYTICAL_2D_CRITIC.md  EXPERIMENT_MULTI_SLICE_3D_CRITIC.md  FIELD_CONTRACT.md  INTERFACE_AUDIT.md  LANE_B_CHECKPOINT.md  METRIC_USEFULNESS_REPORT.md  REAL_COMPARISON_REPORT.md  REAL_INPUT_BLOCKERS.md  UNCERTAINTIES.md
repo_librarian/: README.md  authority_levels.md  catalog.jsonl  catalog.schema.json  check_in.py
schemas/: bridge_field_frame.schema.json  bridge_signature_stream.schema.json
scripts/: cross_slice_gate_calculator.py  run_tpms_family_snr_pilot.py  slice_sweep.py
tests/: conftest.py  test_analytical_2d_critic.py  test_controls.py  test_determinism.py  test_field_contract.py  test_multi_slice_3d_critic.py  test_multi_slice_3d_robustness.py  test_real_comparison.py  test_stage4_adapter.py
tmp_robustness_probe/: robustness_summary.json
tmp_robustness_probe2/: robustness_summary.json
tmp_robustness_profile/: robustness_summary.json
(+520 files in other folders)
