[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topobridge"
version = "0.1.0"
requires-python = ">=3.10"
description = "Read-only bridge layer between coldplate-design-engine and topostream_stage0_specs (Stage 1)"
dependencies = [
    "numpy>=1.24",
    "jsonschema>=4.17",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov"]

[project.scripts]
topobridge = "topobridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
